Prevent university name from being truncated

--- a/src/components/educationCard/EducationCard.scss
+++ b/src/components/educationCard/EducationCard.scss
@@ -34,10 +34,11 @@
   margin: 0;
   font-size: 28px;
   font-weight: 700;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  height: 27px;
+  line-height: 1.25;
+  white-space: normal;
+  overflow: visible;
+  text-overflow: unset;
+  height: auto;
 }
 
 .education-roundedimg {
@@ -106,7 +107,7 @@
   }
   .education-text-school {
     font-size: 20px;
-    height: 23px;
+    height: auto;
   }
   .education-text-duration {
     font-size: 16px;
@@ -136,6 +137,13 @@
     height: 4rem;
     margin-bottom: 1rem;
     margin-right: 0;
+  }
+  .education-text-school {
+    font-size: 24px;
+    line-height: 1.25;
+    white-space: normal;
+    overflow: visible;
+    text-overflow: unset;
   }
   .education-text-desc {
     text-align: left;
